My daily 30 min
New routine, gonna practice 30 min every day of ML.

--- a/Weekend Project 05 Gensim/gensim_tryout.ipynb
+++ b/Weekend Project 05 Gensim/gensim_tryout.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,11 @@
      "text": [
       "It is the world's second largest and second highest valued semiconductor chip manufacturer based on revenue after being overtaken by Samsung Electronics, and is the inventor of the x86 series of microprocessors, the processors found in most personal computers (PCs).\n",
       "Intel also manufactures motherboard chipsets, network interface controllers and integrated circuits, flash memory, graphics chips, embedded processors and other devices related to communications and computing.\n",
-      "['intel', 'chip', 'chips', 'microprocessors', 'microprocessor', 'devices', 'corporation', 'corporations']\n"
+      "intel\n",
+      "chips\n",
+      "microprocessor\n",
+      "devices\n",
+      "corporations\n"
      ]
     }
    ],
@@ -52,8 +56,10 @@
     "                word_count=None, \n",
     "                split=False))\n",
     "# for keywords I can specify how many words to return as keys\n",
+    "# lemmatize=True helps out with words that are very similar, like having an extra 's' at the end.\n",
     "print(keywords(text, \n",
-    "               words = 5).split('\\n'))"
+    "               words=5, \n",
+    "               lemmatize=True).split('\\n'))"
    ]
   },
   {
